syntax = "proto3";

option java_multiple_files = true;
option go_package = "saludo";
option java_package = "com.angelorum.grpc.saludo";
option java_outer_classname = "SaludoProto";

package com.angelorum.grpc;

service SaludoService {
  rpc saludando (HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}